--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,21 +1,18 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+/* src/styles/globals.css */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Poppins', sans-serif;
+}
+
+.bg-blackish {
+  background-color: #111; /* Warna hitam yang sedikit lebih terang */
+}
+
+.text-redish {
+  color: #d00; /* Warna merah yang sedikit lebih redup */
+}
+
+#changing-text {
+  transition: opacity 1s ease-in-out;
 }
